--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,8 @@
 layout: default
 ---
 
-<article class="blog-post">
+<article>
   <h1>{{ page.title }}</h1>
-
-  <p class="post-meta">
-    Published on {{ page.date | date: "%B %d, %Y" }}
-  </p>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
+  <p>{{ page.date | date: "%B %d, %Y" }}</p>
+  {{ content }}
 </article>
