--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,101 @@
 layout: default
 ---
 
-<article>
-  <h1>{{ page.title }}</h1>
-  <p>{{ page.date | date: "%B %d, %Y" }}</p>
-  {{ content }}
-</article>
+<main class="main blog-details-page">
+
+  <!-- Page Title -->
+  <div class="page-title dark-background">
+    <div class="container d-lg-flex justify-content-between align-items-center">
+      <h1 class="mb-2 mb-lg-0">{{ page.title }}</h1>
+
+      <nav class="breadcrumbs">
+        <ol>
+          <li><a href="{{ '/' | relative_url }}">Home</a></li>
+          <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
+          <li class="current">{{ page.title }}</li>
+        </ol>
+      </nav>
+    </div>
+  </div>
+  <!-- End Page Title -->
+
+  <!-- Blog Details Section -->
+  <section class="service-details section">
+
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+      <div class="row gy-4">
+
+        <!-- MAIN CONTENT -->
+        <div class="col-lg-8">
+
+          {% if page.thumbnail %}
+          <div class="service-details-slider swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="{{ page.thumbnail | relative_url }}" class="img-fluid" alt="{{ page.title }}">
+              </div>
+            </div>
+          </div>
+          {% endif %}
+
+          <div class="content mt-5">
+            <p class="text-muted mb-3">
+              📅 {{ page.date | date: "%B %d, %Y" }}
+            </p>
+
+            {{ content }}
+          </div>
+
+        </div>
+
+        <!-- SIDEBAR -->
+        <div class="col-lg-4">
+
+          <!-- POST INFO -->
+          <div class="service-info">
+            <h4>Article Info</h4>
+
+            <div class="info-item">
+              <i class="bi bi-calendar-event"></i>
+              <h5>Published</h5>
+              <p>{{ page.date | date: "%d %B %Y" }}</p>
+            </div>
+
+            {% if page.author %}
+            <div class="info-item">
+              <i class="bi bi-person"></i>
+              <h5>Author</h5>
+              <p>{{ page.author }}</p>
+            </div>
+            {% endif %}
+          </div>
+
+          <!-- RELATED POSTS -->
+          <div class="related-services mt-5">
+            <h4>Related Articles</h4>
+
+            {% for post in site.posts limit:5 %}
+              {% if post.url != page.url %}
+              <div class="service-item">
+                <i class="bi bi-file-text"></i>
+                <h5>
+                  <a href="{{ post.url | relative_url }}">
+                    {{ post.title }}
+                  </a>
+                </h5>
+              </div>
+              {% endif %}
+            {% endfor %}
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+  <!-- End Blog Details Section -->
+
+</main>
