--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,10 @@
 
   {% include footer.html %}
 
+  <a href="#" class="scroll-top d-flex align-items-center justify-content-center">
+  <i class="bi bi-arrow-up-short"></i>
+</a>
+
   <!-- Vendor JS -->
   <script src="{{ '/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' | relative_url }}"></script>
   <script src="{{ '/assets/vendor/aos/aos.js' | relative_url }}"></script>
