--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,6 @@ layout: default
         <ol>
           <li><a href="{{ '/' | relative_url }}">Home</a></li>
           <li><a href="{{ '/blog/' | relative_url }}">Blog</a></li>
-          <li class="current">{{ page.title }}</li>
         </ol>
       </nav>
     </div>
@@ -41,8 +40,8 @@ layout: default
           {% endif %}
 
           <div class="content mt-5">
-            <p class="text-muted mb-3">
-              📅 {{ page.date | date: "%B %d, %Y" }}
+            <p class=" mb-3">
+              Published on {{ page.date | date: "%B %d, %Y" }}
             </p>
 
             {{ content }}
