--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2488,6 +2488,7 @@ section,
   margin-bottom: 25px;
   padding-bottom: 25px;
   border-bottom: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+  display: flex;
 }
 
 .service-details .related-services .service-item:last-child {
@@ -2500,6 +2501,7 @@ section,
   font-size: 24px;
   color: var(--accent-color);
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .service-details .related-services .service-item h5 {
