--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -493,6 +493,12 @@ section,
 .section {
   padding-top: 30px;
 }
+  .content.mt-5 {
+    margin-top: 30px !important;
+  }
+  .col-lg-4 {
+    margin-top: 10px;
+  }
 }
 
 /*--------------------------------------------------------------
